--- a/cryptos/Cargo.toml
+++ b/cryptos/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.5.16", features = ["derive", "env"] }
+clap = { version = "4.5.16", features = ["derive"] }
 diesel = { version = "2.2.2", features = ["postgres"] }
 dotenv = "0.15.0"
-redis = "0.26.1"
-redis-work-queue = "0.1.6"
+redis = { version = "0.26.1", features = ["tokio-comp"] }
+rsmq_async = "12.0.0"
 rust_decimal = "1.35.0"
+tokio = { version = "1.39.3", features = ["full"] }
+xid = "1.1.1"
