--- a/cryptos/Cargo.toml
+++ b/cryptos/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.38"
 clap = { version = "4.5.16", features = ["derive"] }
-diesel = { version = "2.2.2", features = ["postgres", "r2d2"] }
+diesel = { version = "2.2.2", features = ["postgres", "chrono", "r2d2"] }
 dotenv = "0.15.0"
 redis = { version = "0.26.1", features = ["tokio-comp"] }
 rsmq_async = "12.0.0"
