--- a/cryptos/Cargo.toml
+++ b/cryptos/Cargo.toml
@@ -10,9 +10,15 @@ chrono = "0.4.38"
 clap = { version = "4.5.16", features = ["derive"] }
 diesel = { version = "2.2.2", features = ["postgres", "chrono", "r2d2"] }
 dotenv = "0.15.0"
+futures-util = "0.3.30"
+http = "1.1.0"
+log = "0.4.22"
 redis = { version = "0.26.1", features = ["tokio-comp"] }
 rsmq_async = "12.0.0"
 rust_decimal = "1.35.0"
+rust_decimal_macros = "1.36.0"
 serde = { version = "1.0.208", features = ["derive"] }
+serde_json = "1.0.127"
 tokio = { version = "1.39.3", features = ["full"] }
+tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
 xid = "1.1.1"
