--- a/cryptos/.env.example
+++ b/cryptos/.env.example
@@ -4,6 +4,9 @@ DB_02_DSN = "postgres://user:password@127.0.0.2/taoniu"
 REDIS_01_DSN = "redis://127.0.0.1:6379/8"
 REDIS_02_DSN = "redis://127.0.0.2:6379/8"
 
+REDIS_MQ_01_DSN = "redis://127.0.0.1:6379/10"
+REDIS_MQ_02_DSN = "redis://127.0.0.2:6379/11"
+
 NATS_DSN = "nats://127.0.0.1:4222"
 NATS_TOKEN = "nats-token"
 
