--- a/cryptos/Cargo.toml
+++ b/cryptos/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 async-nats = "0.35.1"
 axum = "0.7.5"
 axum-extra = "0.9.3"
-chrono = "0.4.38"
+chrono = { version = "0.4.38", features = ["serde"] }
 clap = { version = "4.5.16", features = ["derive"] }
 diesel = { version = "2.2.2", features = ["postgres", "chrono", "r2d2"] }
 dotenv = "0.15.0"
