--- a/cryptos/Cargo.toml
+++ b/cryptos/Cargo.toml
@@ -14,15 +14,21 @@ clap = { version = "4.5.16", features = ["derive"] }
 diesel = { version = "2.2.2", features = ["postgres", "chrono", "r2d2"] }
 dotenv = "0.15.0"
 futures-util = "0.3.30"
+hex = "0.4.3"
+hmac = "0.12.1"
 http = "1.1.0"
 log = "0.4.22"
 redis = { version = "0.25.4", features = ["tokio-comp"] }
+reqwest = { version = "0.12.7", features = ["json"] }
 rsmq_async = { version = "12.0.0", features = ["tokio-comp"] }
 rust_decimal = "1.35.0"
 rust_decimal_macros = "1.36.0"
 serde = { version = "1.0.208", features = ["derive"] }
 serde_json = "1.0.127"
+serde_urlencoded = "0.7.1"
+sha2 = "0.10.8"
 tokio = { version = "1.39.3", features = ["full"] }
 tokio-cron = "0.1.3"
 tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
+url = "2.5.2"
 xid = "1.1.1"
