--- a/cryptos/Cargo.toml
+++ b/cryptos/Cargo.toml
@@ -25,6 +25,7 @@ rust_decimal_macros = "1.36.0"
 serde = { version = "1.0.208", features = ["derive"] }
 serde_json = "1.0.127"
 sha2 = "0.10.8"
+talib = "0.1.0"
 tokio = { version = "1.39.3", features = ["full"] }
 tokio-cron = "0.1.3"
 tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
