--- a/cryptos/Cargo.toml
+++ b/cryptos/Cargo.toml
@@ -21,7 +21,7 @@ log = "0.4.22"
 redis = { version = "0.25.4", features = ["tokio-comp"] }
 reqwest = { version = "0.12.7", features = ["json"] }
 rsmq_async = { version = "12.0.0", features = ["tokio-comp"] }
-rust_decimal = "1.35.0"
+rust_decimal = { version = "1.35.0", features = ["maths"] }
 rust_decimal_macros = "1.36.0"
 serde = { version = "1.0.208", features = ["derive"] }
 serde_json = "1.0.127"
