--- a/cryptos/Cargo.toml
+++ b/cryptos/Cargo.toml
@@ -31,5 +31,6 @@ tokio = { version = "1.39.3", features = ["full"] }
 tokio-cron = "0.1.3"
 tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
 tower = "0.5.0"
+typetag = "0.2.18"
 url = "2.5.2"
 xid = "1.1.1"
