--- a/cryptos/Cargo.toml
+++ b/cryptos/Cargo.toml
@@ -14,9 +14,12 @@ clap = { version = "4.5.16", features = ["derive"] }
 diesel = { version = "2.2.2", features = ["postgres", "chrono", "r2d2"] }
 diesel_as_jsonb = "1.0.1"
 dotenv = "0.15.0"
+erased-serde = "0.4.5"
 futures-util = "0.3.30"
 hex = "0.4.3"
 hmac = "0.12.1"
+jose-jwe = "0.0.0"
+jose-jwt = "0.0.0"
 log = "0.4.22"
 redis = { version = "0.25.4", features = ["tokio-comp"] }
 reqwest = { version = "0.12.7", features = ["json"] }
@@ -31,6 +34,5 @@ tokio = { version = "1.39.3", features = ["full"] }
 tokio-cron = "0.1.3"
 tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
 tower = "0.5.0"
-typetag = "0.2.18"
 url = "2.5.2"
 xid = "1.1.1"
