--- a/cryptos/Cargo.toml
+++ b/cryptos/Cargo.toml
@@ -18,8 +18,7 @@ erased-serde = "0.4.5"
 futures-util = "0.3.30"
 hex = "0.4.3"
 hmac = "0.12.1"
-jose-jwe = "0.0.0"
-jose-jwt = "0.0.0"
+josekit = "0.8.7"
 log = "0.4.22"
 redis = { version = "0.25.4", features = ["tokio-comp"] }
 reqwest = { version = "0.12.7", features = ["json"] }
