--- a/cryptos/Cargo.toml
+++ b/cryptos/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 async-nats = "0.35.1"
 axum = "0.7.5"
 axum-extra = "0.9.3"
+base64 = "0.22.1"
 chrono = { version = "0.4.38", features = ["serde"] }
 clap = { version = "4.5.16", features = ["derive"] }
 diesel = { version = "2.2.2", features = ["postgres", "chrono", "r2d2"] }
@@ -22,6 +23,7 @@ josekit = "0.8.7"
 log = "0.4.22"
 redis = { version = "0.25.4", features = ["tokio-comp"] }
 reqwest = { version = "0.12.7", features = ["json"] }
+rsa = { version = "0.9.6", features = ["sha2"] }
 rsmq_async = { version = "12.0.0", features = ["tokio-comp"] }
 rust_decimal = { version = "1.35.0", features = ["maths"] }
 rust_decimal_macros = "1.36.0"
